--- a/05_CSS/claseEspecificidad/styles.css
+++ b/05_CSS/claseEspecificidad/styles.css
@@ -19,23 +19,23 @@ h1{
     font-family: monospace;
 }
 
-#main-nav{
+.nav{
     margin-top: 10px;
     list-style: none;
     padding-left: 0px;
 }
 
-#main-nav li{
+.nav li{
     display: inline-block;
 }
 
-#main-nav a{
+.nav a{
     color: white;
     background-color: #13a4a4;
     border-radius: 2px;
     text-decoration: none;
 }
 
-#main-nav .blog{
+.nav .blog{
     background-color: red;
 }
